<resources>
    <string name="app_name">Gitfind</string>
    <string name="search">Search</string>

    <string name="search_hint">Input KeyWord</string>
    <string name="tvusernamedetail">tvusernamedetail</string>
    <string name="tvnamedetail">tvnamedetail</string>
    <string name="tvrepodetail">tvrepodetail</string>
    <string name="tvcompanydetail">tvcompanydetail</string>
    <string name="tvlocationdetail">tvlocationdetail</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="change_language_settings">Change Local Language</string>

    <string name="reminder_setting">reminder setting</string>
    <string name="daily_remxinder">daily reminder</string>
    <string name="change_notification_settings">Notification Settings</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="add_favorite">"Added Favorite"</string>
    <string name="delete_favorite">"Deleted Favorite"</string>
    <string name="empty_favorite">Empty Data</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_message">Find new favorite user on Github</string>

</resources>