<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Gainsboro">

        <ImageButton
            android:id="@+id/btnimg_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/tvlocationdetail"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            android:background="@drawable/favorite_toogle"></ImageButton>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/cv_user_detail">
        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/tvusernamedetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvusernamedetail"
            android:layout_below="@+id/cv_user_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tvnamedetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnamedetail"
            android:layout_below="@+id/tvusernamedetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tvrepodetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvrepodetail"
            android:layout_below="@+id/tvnamedetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvcompanydetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvrepodetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/tvcompanydetail" />
        <TextView
            android:id="@+id/tvlocationdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvlocationdetail"
            android:layout_below="@+id/tvcompanydetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:tabTextColor="@android:color/white"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs">


    </androidx.viewpager2.widget.ViewPager2>



</androidx.constraintlayout.widget.ConstraintLayout>